--- a/home/templates/home/snippet/eligibility_prompts.html
+++ b/home/templates/home/snippet/eligibility_prompts.html
@@ -248,7 +248,7 @@
 		<h4>Coordinator actions for {{ c.name }}</h4>
 		<ul>
 			<li><a href="{% url 'community-landing' round_slug=role.current_round.slug community_slug=c.slug %}">View the community projects page applicants see</a></li>
-			<li><a href="{% url 'community-read-only' community_slug=c.slug %}">Edit the community info</a></li>
+			<li><a href="{{ c.get_preview_url }}">Edit the community info</a></li>
 			<li><a href="{% url 'community-applicants' round_slug=role.current_round.slug community_slug=c.slug %}">Review community applicants</a></li>
 		</ul>
 		{% endfor %}
