--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -235,7 +235,7 @@ Outreachy Internships | Apply | Pick a Project
 			{% else %}
 				<p>Learn more about the {{ community.name }} on the
 			{% endif %}
-			<a href="{% url 'community-landing' round_slug=participation.participating_round.slug community_slug=participation.community.slug %}">{{ community.name }} community landing page</a>.</p>
+			<a href="{{ participation.get_absolute_url }}">{{ community.name }} community landing page</a>.</p>
 		{% else %}
 			{% include 'home/snippet/project_hidden.html' %}
 		{% endif %}
@@ -288,7 +288,7 @@ Outreachy Internships | Apply | Pick a Project
 		<p>{{ community.description }}</p>
 		{% if role.application.is_approved or role.is_volunteer %}
 			<p>Document your contributions to these internship projects on the
-			<a href="{% url 'community-landing' round_slug=participation.participating_round.slug community_slug=participation.community.slug %}">{{ community.name }} community landing page</a>.</p>
+			<a href="{{ participation.get_absolute_url }}">{{ community.name }} community landing page</a>.</p>
 		{% endif %}
 		{% with project_status="closed " %}
 			{% include 'home/snippet/projects_for_round_page.html' %}
