--- a/home/templates/home/dashboard/mentor_projects.html
+++ b/home/templates/home/dashboard/mentor_projects.html
@@ -16,7 +16,7 @@ You can also <a href="{% url 'community-cfp' %}#mentor">submit another project</
 	</p>
 	<ul>
 	{% for participation in communities %}
-		<li>{{ participation.community.name }}: <a href="{% url 'community-applicants' round_slug=participation.participating_round.slug community_slug=participation.community.slug %}">see applicants</a> or <a href="{{ participation.get_preview_url }}">submit another project</a> or <a href="{% url 'community-landing' round_slug=participation.participating_round.slug community_slug=participation.community.slug %}">view the community projects page applicants see</a></li>
+		<li>{{ participation.community.name }}: <a href="{% url 'community-applicants' round_slug=participation.participating_round.slug community_slug=participation.community.slug %}">see applicants</a> or <a href="{{ participation.get_preview_url }}">submit another project</a> or <a href="{{ participation.get_absolute_url }}">view the community projects page applicants see</a></li>
 	{% endfor %}
 	</ul>
 	{% endif %}
