--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -19,7 +19,7 @@
 <p><a href="/apply/">Why apply to Outreachy?</a>
 &gt; <a href="/apply/eligibility/">Outreachy Eligibility Rules</a>
 &gt; <a href="/apply/project-selection/">Find a Mentor and Internship Project</a>
-&gt; <a href="{% url 'community-landing' round_slug=project.round.slug community_slug=project.project_round.community.slug %}">{{ community.name }}</a>
+&gt; <a href="{{ project.project_round.get_absolute_url }}">{{ community.name }}</a>
 {% if not current_round.contributions_close.has_passed %}
 	&gt; Record a Contribution and Apply</p>
 {% else %}
