--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -4,7 +4,7 @@
 {% if not current_round.contributions_close.has_passed %}
 	Record Contributions and Apply to {{ community.name }}
 {% else %}
-	{% if final_application and not project.round.has_intern_announcement_deadline_passed %}
+	{% if final_application and not project.round.internannounce.has_passed %}
 		Record Contributions and View Application to {{ community.name }}
 	{% else %}
 		View Contributions to {{ community.name }}
@@ -23,7 +23,7 @@
 {% if not current_round.contributions_close.has_passed %}
 	&gt; Record a Contribution and Apply</p>
 {% else %}
-	{% if final_application and not project.round.has_intern_announcement_deadline_passed %}
+	{% if final_application and not project.round.internannounce.has_passed %}
 		&gt; Record Contributions and View Application
 	{% else %}
 		&gt; View Contributions
@@ -51,7 +51,7 @@
 	<a href="https://www.outreachy.org/apply/make-contributions/">check out our contribution tips</a>.
 	</p>
 {% else %}
-	{% if final_application and not project.round.has_intern_announcement_deadline_passed %}
+	{% if final_application and not project.round.internannounce.has_passed %}
 		<h1>Record Contributions and View Application to {{ community.name }}</h1>
 		<p>You're recording contributions and viewing your application to the following project:</p>
 		<p><strong>{{ project.short_title }}</strong></p>
@@ -205,13 +205,13 @@
 	<br><strong>{{ project.short_title }}</strong>
 	</p>
 {% endif %}
-{% if not current_round.contributions_close.has_passed or not project.round.has_intern_announcement_deadline_passed and final_application %}
+{% if not current_round.contributions_close.has_passed or not project.round.internannounce.has_passed and final_application %}
 	<p><a class='btn btn-success' href="{% url 'contributions-add' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record a Contribution</a></p>
 {% endif %}
 <hr>
 {% for c in contributions %}
 <p><i>Contribution #{{ forloop.counter }}: started {{ c.date_started }}{% if c.date_merged %}, merged {{ c.date_merged }}{% else %}. <strong>Not accepted or merged.</strong></i>{% endif %}
-	{% if not current_round.contributions_close.has_passed or not project.round.has_intern_announcement_deadline_passed and final_application%}
+	{% if not current_round.contributions_close.has_passed or not project.round.internannounce.has_passed and final_application%}
 		Update accepted date by editing this contribution.</p>
 		<p><a class='btn btn-primary' href="{% url 'contributions-edit' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug contribution_slug=c.pk %}">Edit Contribution</a></p>
 	{% else %}
